# Optic

./: .gitignore  arm.ini  build.sh  connect_luckfox.sh  dma_alloc.hpp  fetch_luckfox.sh  layout_cvt.h  main.c  main.cc  meson.build  optic_clock.c  optic_collision_object.c  optic_main_loop.c  optic_object.c  optic_point.c  optic_queue.c  optic_tensor.c  optic_threadpool.c  optic_vector.c  optic_voxel.c  readme.txt  run.sh  send_luckfox.sh  setup.sh
include/: common.h  optic_clock.h  optic_collision_object.h  optic_main_loop.h  optic_object.h  optic_point.h  optic_queue.h  optic_tensor.h  optic_threadpool.h  optic_vector.h  optic_voxel.h
packgeconf/: rga.pc  rknn_api.pc
test/: bin2img.py  bin2paf.py  fetch_luckfox.sh  graph.dot  output_np.npy  send_local.sh
testbed/: build.sh  test  test.c
